[gd_scene load_steps=9 format=3 uid="uid://d3qdd2onb72m1"]

[ext_resource type="Script" path="res://Monsters/seer.gd" id="1_jix3n"]
[ext_resource type="Texture2D" uid="uid://c0vwhdbfuytf4" path="res://Assets/seer.png" id="2_7wq1x"]
[ext_resource type="PackedScene" uid="uid://caqyngauv4akj" path="res://Monsters/kill_zone.tscn" id="3_6ru4h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20lf8"]
bg_color = Color(0.00820202, 0.00820203, 0.00820202, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hpyu"]
bg_color = Color(0.968627, 0.00392157, 0.00392157, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i3gja"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_athfh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2vfah"]

[node name="Seer" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_jix3n")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -19.0
offset_right = -4.0
offset_bottom = 8.0
rotation = -1.56745
theme_override_styles/background = SubResource("StyleBoxFlat_20lf8")
theme_override_styles/fill = SubResource("StyleBoxFlat_4hpyu")
max_value = 20.0
value = 20.0
fill_mode = 2
show_percentage = false

[node name="AnimatedSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7wq1x")

[node name="KillZone" parent="." instance=ExtResource("3_6ru4h")]
position = Vector2(4, 1)
scale = Vector2(1, 1.57224)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 1)
shape = SubResource("CapsuleShape2D_i3gja")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Detect" type="Area2D" parent="."]
scale = Vector2(0.893796, 0.957471)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
scale = Vector2(29.0871, 26.5773)
shape = SubResource("CircleShape2D_athfh")

[node name="ChaseGap" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseGap"]
scale = Vector2(19.2637, 18.3411)
shape = SubResource("CircleShape2D_2vfah")

[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_detect_body_exited"]
